# bafrapy

./: .env.example  .gitignore  Dockerfile.base  Makefile  README.md  docker-compose-phpmyadmin.yml  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
bafrapy/: worker_main.py
bafrapy/app/: base.py  cache.py  handler.py  main.py
bafrapy/app/pages/: base.py  dashboard.py  download.py
bafrapy/app/render/: dashboard.py  download.py
bafrapy/backend/tasks/: backtesting.py  data.py  queues.py  worker.py
bafrapy/backoffice/db/: __init__.py  base.py  crud.py  exchange_repository.py  main_repository.py  market_availability_repository.py  market_repository.py  resolution_repository.py  task_repository.py
bafrapy/backoffice/models/: __init__.py  exchange.py  tasks.py
bafrapy/backtest/: base.py  dataset.py  exceptions.py
bafrapy/backtest/dataset/: __init__.py  base.py  ducklake.py  pandas.py  polars.py
bafrapy/backtest/money/: __init__.py  currency.py  emoney.py  ohlcv.py  rate.py  wallet.py
bafrapy/config/: log.json
bafrapy/config/providers/: binance.json
bafrapy/data_provider/: base_provider.py  binance_provider.py
bafrapy/datawarehouse/: base.py  ch_schema.sql  repository.py
bafrapy/env_reader/: database.py
bafrapy/exchanges/: __init__.py  client.py  factory.py  markets.py
bafrapy/exchanges/clients/: __init__.py  binance.py  parser.py
bafrapy/init_data/: models.json
bafrapy/libs/: datetime.py  parsetime.py  rangetimes.py  serializable.py  singleton.py
bafrapy/logger/: __init__.py  log.py
bafrapy/models/: __init__.py  assets.py  base.py  generated.py  providers.py  providers_resolutions.py  resolution.py
bafrapy/models/data/: ch_schema.sql  repo.py
bafrapy/models/management/: base.py  providers.py  repo.py
bafrapy/providers/: base.py  binance.py
bafrapy/queue/: __init__.py
bafrapy/repositories/: __init__.py  asset.py  base.py  crud.py  mainrepository.py  provider.py  resolution.py  result.py  uow.py
bafrapy/repository/: data_repo.py  data_schema.sql
bafrapy/tasks/: __init__.py  backtesting.py  factory.py  pruebasync.py  queue.py  syncdata.py  syncsymbols.py
bafrapy_sqlacodegen/: pyproject.toml
bafrapy_sqlcodegen/: generator.py  pyproject.toml
clickhouse-settings/: custom-config.xml  custom-user.xml  verify.sql
config/providers/: binance.json
directus/: Dockerfile
directus-sync/: Dockerfile  directus-sync.config.js
flows/: definitions.py  task_tracking.py
flows/defs/exchanges/: assets.py
flows/defs/markets/: assets.py  definitions.py
flows/defs/ohlcv/: assets.py  definitions.py
flows/resources/: backoffice.py  datawarehouse.py
gizmosql/: Dockerfile
gizmosql/init/: init_ducklake.sql
postgresql/: 01-create-databases.sql
scripts/: generate-models.py  generate_reqs.sh  st-dev.sh  tests.sh
tests/backtest/: base_test.py  dataset_test.py
tests/data/: test_clickhouse.py
tests/integration/backoffice/: base.py  test_exchange_repository.py  test_market_availability_repository.py  test_market_repository.py  test_resolution_repository.py  test_task_repository.py  test_uow.py
tests/integration/base/: __init__.py  providermock.py  repository.py
tests/integration/datawarehouse/: test_clickhouse.py
tests/integration/models/: test_assets.py  test_provider.py  test_resolutions.py  test_results.py
tests/integration/tasks/: base.py
tests/libs/: test_datetime.py
tests/models/: base.py  test_assets.py  test_provider.py  test_results.py
tests/providers/: test_binance.py
tests/unitary/backoffice/db/: test_crud.py
tests/unitary/backtest/: test_dataset.py  test_orders.py  test_vbroker.py
tests/unitary/backtest/money/: test_currency.py  test_money.py  test_ohlcv.py  test_rate.py  test_wallet.py
tests/unitary/exchanges/: test_binance.py
tests/unitary/libs/: parsetime.py  test_datetime.py
tests/unitary/providers/: test_binance.py
workflows/: main.py
workflows/deployments/: gateway.py  worker.py
workflows/tasks/: data.py  symbols.py
