[project]
name = "bafrapy"
version = "0.0.1"
description = "Backtesting framework for crypto trading strategies"
authors = [
    {name = "Jose Francisco Castillo Berenguel"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.8.15",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "peewee>=3.17.9",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "rq>=2.1.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bafrapy*"]

[tool.setuptools.package-data]
bafrapy = ["**/*.py"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 1
lines_between_sections = 1
force_sort_within_sections = true
combine_as_imports = true
group_by_package = true
