[project]
name = "bafrapy"
version = "0.0.1"
description = "Backtesting framework for crypto trading strategies"
authors = [
    {name = "Jose Francisco Castillo Berenguel"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "backoff>=2.2.1",
    "cattrs>=25.2.0",
    "clickhouse-connect>=0.8.15",
    "dotenv>=0.9.9",
    "environ>=1.0",
    "environs>=14.1.1",
    "falcon>=4.0.2",
    "fastapi>=0.115.11",
    "flask>=3.1.0",
    "freezegun>=1.5.2",
    "frozendict>=2.4.6",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "ksuid>=1.3",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "mysqlclient>=2.2.7",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "pipreqs>=0.5.0",
    "prefect[shell]>=3.4.15",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "pytest>=8.3.5",
    "ray[default,serve]>=2.50.1",
    "requests>=2.32.3",
    "responses>=0.25.7",
    "rq>=2.1.0",
    "rq-dashboard>=0.8.2.2",
    "ruff>=0.14.3",
    "sqlacodegen>=3.1.1",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "testcontainers[clickhouse,redis]>=4.10.0",
    "types-peewee>=3.17.9.20250401",
    "uvicorn>=0.34.0",
    "yarl>=1.20.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bafrapy*"]

[tool.setuptools.package-data]
bafrapy = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 1
lines_between_sections = 1
combine_as_imports = true
group_by_package = true
force_sort_within_sections = false
