[project]
name = "bafrapy"
version = "0.0.1"
description = "Backtesting framework for crypto trading strategies"
authors = [
    {name = "Jose Francisco Castillo Berenguel"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "backoff>=2.2.1",
    "cattrs>=25.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "freezegun>=1.5.2",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "ksuid>=1.3",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "mysqlclient>=2.2.7",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "pydantic>=2.10.6",
    "pymysql>=1.1.2",
    "pytest>=8.3.5",
    "ray[default,serve]>=2.50.1",
    "requests>=2.32.3",
    "responses>=0.25.7",
    "ruff>=0.14.3",
    "sqlacodegen==4.0.3",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "testcontainers[clickhouse,postgres,redis]>=4.10.0",
    "yarl>=1.20.0",
    "bafrapy_sqlacodegen>=0.1.0",
    "deptry>=0.24.0",
    "python-dateutil>=2.9.0.post0",
    "beartype>=0.22.9",
    "dagster>=1.13.6",
    "dagster-webserver>=1.13.6",
    "dagster-dg-cli>=1.13.6",
    "ccxt>=4.5.54",
    "psycopg[binary]>=3.2",
    "jmespath>=1.1.0",
    "polars>=1.41.2",
    "adbc-driver-gizmosql>=1.1.7",
    "pyarrow>=24.0.0",
    "fsspec>=2026.4.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bafrapy*", "flows*"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "flows"

[tool.dagster]
module_name = "flows.definitions"

[tool.setuptools.package-data]
bafrapy = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 1
lines_between_sections = 1
combine_as_imports = true
group_by_package = true
force_sort_within_sections = false

[tool.ruff]
line-length = 120

[tool.uv.sources]
bafrapy_sqlacodegen = { path = "./bafrapy_sqlacodegen", editable = true }
