[project]
name = "bafrapy_sqlacodegen"
version = "0.1.0"
description = "Opinionated generators from sqlacodegen"
requires-python = ">=3.10"
dependencies = ["sqlacodegen>=3.1.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."sqlacodegen.generators"]
bafrapy_declarative = "bafrapy_sqlacodegen.generator:BafrapyDeclarativeGenerator"
bafrapy_sqlmodel = "bafrapy_sqlacodegen.generator:BafrapySQLModelGenerator"
