[project]
name = "bafrapy_sqlcodegen"
version = "0.1.0"
description = "Custom SQLModel generator that renames FK columns to *_id"
requires-python = ">=3.10"
dependencies = ["sqlacodegen>=3.1.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."sqlacodegen.generators"]
foreign_key_id_suffix = "bafrapy_sqlcodegen.generator:ForeignKeyIdSuffixGenerator"
