[project]
name = "bafrapy_sqlcodegen"
version = "0.1.0"
description = "Opinionated generators from sqlacodegen"
requires-python = ">=3.10"
dependencies = ["sqlacodegen>=3.1.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."sqlacodegen.generators"]
bafrapy_declarative = "bafrapy_sqlcodegen.generator:BafrapyDeclarativeGenerator"
bafrapy_sqlmodel = "bafrapy_sqlcodegen.generator:BafrapySQLModelGenerator"
